--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
   <head>
    <script src="https://raw.githubusercontent.com/silvionetoads/mcpm/refs/heads/main/relogio.js"></script>
+    
+   <script src="https://cdn.jsdelivr.net/gh/silvionetoads/mcpm/relogio@main/relogio.js"></script>
+
   </head>
   <body>
   
