--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <meta name="google-adsense-account" content="ca-pub-7798108817458293">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7798108817458293"
+     crossorigin="anonymous"></script>
    
   </head>
   <body>
