--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1>Olá, sou o Instrutor CFV Silvio Neto</h3>
     <h2>Contato: (73) 99847-1327</h2>
     <h3>Instagram: @eusilvioneto</h1>
-    <ol>
-  <li>Cursos</li>
-  <li>Noção em Segurança Eletrônica - N.S.E. <a href="https://docs.google.com/presentation/d/1elx6dGTWvfz9kzBHsGgy1sLNxn_uDuKVuHsDoAzb3nE/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Acesso </a></li>
-  <li>N.S.E. Aula Dinâmica <a href= "https://docs.google.com/forms/d/e/1FAIpQLScFRUGhHQGE5DAaU3rKawRB_JhVFi5g2UnW3i_bYAsfh7SqfA/viewform?usp=header" target="_blank" rel="noopener noreferrer"> Acesso </a> </li>
-  <li>Sistema Ronda Padrão <a href= "https://silvionetoads.github.io/rondapadrao/"> Acesso </a> </li>
-    </ol>
+
+  <p>Conteúdos de cursos CFV</p> 
+  <p>Noção em Segurança Eletrônica - N.S.E. <a href="https://docs.google.com/presentation/d/1elx6dGTWvfz9kzBHsGgy1sLNxn_uDuKVuHsDoAzb3nE/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Acesso </a></p>
+  <p>N.S.E. Aula Dinâmica <a href= "https://docs.google.com/forms/d/e/1FAIpQLScFRUGhHQGE5DAaU3rKawRB_JhVFi5g2UnW3i_bYAsfh7SqfA/viewform?usp=header" target="_blank" rel="noopener noreferrer"> Acesso </a></p>
+  <p>Sistema Ronda Padrão <a href= "https://silvionetoads.github.io/rondapadrao/"> Acesso </a></p>
+
    
   </center> 
   </body>
